--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="download_ok">Download successfull</string>
     <string name="download_error">Error when trying to download.\n Retry later.</string>
     <string name="open_browser">Open in Browser</string>
+    <string name="instances_prompt">Choose a LQFB instance</string>
 </resources>
