--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Liqoid</string>
-         <string name="dataage">Datenalter</string>   <string name="tab_upcoming">Anstehend</string>
+    <string name="dataage">Datenalter</string>
+    <string name="tab_upcoming">Anstehend</string>
     <string name="tab_recent">Neueste</string>
     <string name="tab_inis">Themen</string>
     <string name="tab_areas">Gebiete</string>
     <string name="menu_refresh">Aktualisieren</string>
-     <string name="downloading">Lade vom LQFB Server</string>
-     <string name="download_ok">Download ok</string>
+    <string name="downloading">Lade vom LQFB Server</string>
+    <string name="download_ok">Download ok</string>
     <string name="download_error">Fehler bei Serververbindung.\n Netzaffines Liqoid wartet auf Netz..</string>
     <string name="open_browser">Im Browser öffnen</string>
- <string name="instances_prompt">Wähle eine LQFB Instanz</string>
+    <string name="instances_prompt">Wähle eine LQFB Instanz</string>
+    <string name="sortnewestfirst">Neueste zuerst</string>
+    <string name="sortoldestfirst">Älteste zuerst</string>
 </resources>
