--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Liqoid</string>
-     <string name="dataage">Data from</string>
+    <string name="dataage">Data from</string>
     <string name="tab_upcoming">Upcoming</string>
     <string name="tab_recent">Recent</string>
     <string name="tab_inis">Inis</string>
@@ -12,4 +12,6 @@
     <string name="download_error">Error when trying to download.\n Waiting for network...</string>
     <string name="open_browser">Open in Browser</string>
     <string name="instances_prompt">Choose a LQFB instance</string>
+    <string name="sortnewestfirst">Newest first</string>
+    <string name="sortoldestfirst">Oldest first</string>
 </resources>
