--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -12,5 +12,6 @@
     <string name="download_error">Fehler bei Serververbindung.\n Netzaffines Liqoid wartet auf Netz..</string>
     <string name="open_browser">Im Browser öffnen</string>
     <string name="instances_prompt">Wähle eine LQFB Instanz</string>
-  <string name="reversesort">Umsortieren</string>
- </resources>
+    <string name="reversesort">Umsortieren</string>
+    <string name="share">Teilen</string>
+</resources>
