--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13,5 +13,6 @@
     <string name="open_browser">Open in Browser</string>
     <string name="instances_prompt">Choose a LQFB instance</string>
     <string name="reversesort">Reverse Order</string>
- 
+    <string name="share">Share</string>
+
 </resources>
