--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,5 +14,6 @@
     <string name="instances_prompt">Choose a LQFB instance</string>
     <string name="reversesort">Reverse Order</string>
     <string name="share">Share</string>
+    <string name="updating">Updating</string>
 
 </resources>
