--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -17,8 +17,7 @@
     <string name="updating">Updating</string>
     <string name="filterfavorites">Filter Favs</string>
     <string name="about">About Liqoid</string>
-
-    <string name="fullcredits">Hello this is Liqoid V 0.1 pre!\n Developer: @andizottmann\n All CC-BY-SA 3.0 DE\n
+    <string name="fullcredits">Hello this is Liqoid V 0.1 TestNummerZwo!\n Developer: @andizottmann\n All CC-BY-SA 3.0 DE\n
     Thanks to:\n@darkbln @viirus42 @LarsUlrich92 @Bocki_NBG  @threehoursleep @PiratenCup @mockfrog @Iceman
     @bridgerdier @hubx @larswestphal @Piratonym Tokamak  @mon3yp3nny
     </string>
