--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -17,6 +17,9 @@
     <string name="updating">Updating</string>
     <string name="filterfavorites">Filter Favs</string>
     <string name="about">About Liqoid</string>
+    <string name="calendar">Calendar entry for next event</string>
+     <string name="calendar_voting">Calendar entry for start voting</string>
+    <string name="voting_begin">Voting starts</string>
     <string name="fullcredits">Hello this is Liqoid V 0.1.1!\n Developer: @andizottmann\n All CC-BY-SA 3.0 DE\n
     Thanks to:\n@darkbln @viirus42 @LarsUlrich92 @Bocki_NBG  @threehoursleep @PiratenCup @mockfrog @Iceman
     @bridgerdier @hubx @larswestphal @Piratonym Tokamak  @mon3yp3nny
