--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,9 +18,10 @@
     <string name="filterfavorites">Filter Favs</string>
     <string name="about">About Liqoid</string>
     <string name="calendar">Calendar entry for next event</string>
-     <string name="calendar_voting">Calendar entry for start voting</string>
+    <string name="calendar_voting">Calendar entry for start voting</string>
     <string name="voting_begin">Voting starts</string>
     <string name="noareasselected">To view issues, you have to select areas first.</string>
+    <string name="prefs">Settings</string>
     <string name="fullcredits">Hello this is Liqoid V 0.1.1!\n Developer: @andizottmann\n All CC-BY-SA 3.0 DE\n
     Thanks to:\n@nlohmann @darkbln @viirus42 @LarsUlrich92 @Bocki_NBG  @threehoursleep @PiratenCup @mockfrog @Iceman
     @bridgerdier @hubx @larswestphal @Piratonym Tokamak  @mon3yp3nny
