Global prefs work perfect.

--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -21,5 +21,7 @@
     <string name="calendar_voting">Kalendereintrag für Abstimmungsbeginn</string>
     <string name="voting_begin">Abstimmungsbeginn</string>
     <string name="noareasselected">Um Themen anzuzeigen,\nmusst Du vorher\nThemengebiete auswählen.</string>
+    <string name="prefs">Einstellungen</string>
+
 
 </resources>
