--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="voting_begin">Voting starts</string>
     <string name="noareasselected">To view issues, you have to select areas first.</string>
     <string name="prefs">Settings</string>
+    <string name="dateformat">yy-MM-dd HH:mm</string>
     <string name="fullcredits">Hello this is Liqoid V 0.1.1!\n Developer: @andizottmann\n All CC-BY-SA 3.0 DE\n
     Thanks to:\n@nlohmann @darkbln @viirus42 @LarsUlrich92 @Bocki_NBG  @threehoursleep @PiratenCup @mockfrog @Iceman
     @bridgerdier @hubx @larswestphal @Piratonym Tokamak  @mon3yp3nny
