Expandable Inis works - GUI overworked

--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -4,7 +4,7 @@
     <string name="dataage">Datenalter</string>
     <string name="tab_upcoming">Anstehende Ereignisse</string>
     <string name="tab_recent">Neueste Ereignisse</string>
-    <string name="tab_inis">Themen wählen</string>
+    <string name="tab_inis">Neue Themen</string>
     <string name="tab_areas">Gebiete wählen</string>
     <string name="menu_refresh">Aktualisieren</string>
     <string name="downloading">Lade vom LQFB Server</string>
