--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -29,7 +29,8 @@
     <string name="userguideurl">http://wiki.piratenpartei.de/Benutzer:Andizo/Liqoid/GuidedTour</string>
     <string name="addinstance">Add your instance</string>
     <string name="addinstanceurl">http://wiki.piratenpartei.de/Benutzer:Andizo/Liqoid/Instanzen</string>
-    <string name="fullcredits">Hello this is Liqoid V 0.1.1!\n Developer: @andizottmann\n
+    <string name="datanotcomplete">Data NOT complete</string>
+       <string name="fullcredits">Hello this is Liqoid V 0.1.1!\n Developer: @andizottmann\n
     All CC-BY-SA 3.0 DE\n
     Thanks to:\n@nlohmann @darkbln @viirus42 @LarsUlrich92 @Bocki_NBG  @threehoursleep @PiratenCup @mockfrog @Iceman
     @bridgerdier @hubx @larswestphal @Piratonym Tokamak  @mon3yp3nny
