--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -24,13 +24,20 @@
     <string name="noareasselected">Um Themen anzuzeigen,\nmusst Du vorher\nThemengebiete auswählen.</string>
     <string name="prefs">Einstellungen</string>
     <string name="dateformat">dd.MM.yy HH:mm</string>
-    <string name="projecthome">Zur Projektseite</string>
+    <string name="projecthome">Projektseite</string>
     <string name="projecthomeurl">http://wiki.piratenpartei.de/Benutzer:Andizo/Liqoid</string>
-    <string name="userguide">Zur guided Tour</string>
+    <string name="userguide">Userguide</string>
     <string name="userguideurl">http://wiki.piratenpartei.de/Benutzer:Andizo/Liqoid/GuidedTour</string>
     <string name="addinstance">Deine Instanz hinzufügen</string>
     <string name="addinstanceurl">http://wiki.piratenpartei.de/Benutzer:Andizo/Liqoid/Instanzen</string>
     <string name="datanotcomplete">Daten NICHT vollständig</string>
-
+    <string name="menu_unlock_instance">Instanzen freigeben</string>
+    <string name="menu_lock_instance">Instanzen sperren</string>
+    <string name="ok">Okey</string>
+    <string name="cancel">Abbrechen</string>
+    <string name="enterdeveloperkey">Developerkey eingeben</string>
+    <string name="enterdeveloperkeyhints">Den Developerkey bekommst Du in der jeweilgen LQFB-Instanz. Dort meldest Du Dich an und kannst den key unter \"Einstellungen\" generieren.</string>
+    <string name="resetpublicinstances">Zurücksetzen</string>
+     <string name="toinstance">zur Instanz</string>
 
 </resources>
