--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -39,9 +39,9 @@
     <string name="enterdeveloperkeyhints">The Developerkey is generated from LQFB, see Settings there.</string>
     <string name="resetpublicinstances">Restore public instances</string>
     <string name="toinstance">To instance</string>
-    <string name="fullcredits">Hello this is Liqoid V 0.1.2!\n Developer: @andizottmann\n
+    <string name="fullcredits">Hello this is Liqoid V 0.1.4!\n Developer: @andizottmann\n
     All CC-BY-SA 3.0 DE\n
     Thanks to:\n@nlohmann @darkbln @viirus42 @LarsUlrich92 @Bocki_NBG  @threehoursleep @PiratenCup @mockfrog @Iceman
-    @bridgerdier @hubx @larswestphal @Piratonym Tokamak  @mon3yp3nny
+    @bridgerdier @hubx @larswestphal @Piratonym Tokamak  @mon3yp3nny @RedDog
     </string>
 </resources>
