--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -42,6 +42,12 @@
     <string name="ptr_pull_to_refresh">Pull to refresh</string>
     <string name="ptr_release_to_refresh">Release to refresh</string>
     <string name="ptr_refreshing">Refreshing</string>
+    <string name="finished">Finished</string>
+    <string name="new_">New</string>
+    <string name="accepted">Accepted</string>
+    <string name="frozen">Frozen</string>
+    <string name="voting">Voting</string>
+    <string name="unknown">Unknown</string>
     <string name="fullcredits">Hello this is Liqoid V 0.1.9!\n Developer: @andizottmann\n
     All CC-BY-SA 3.0 DE\n
     Thanks to:\n@nlohmann @darkbln @viirus42 @LarsUlrich92 @Bocki_NBG  @threehoursleep @PiratenCup @mockfrog @Iceman
