--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -48,7 +48,18 @@
     <string name="frozen">Frozen</string>
     <string name="voting">Voting</string>
     <string name="unknown">Unknown</string>
-    <string name="fullcredits">Hello this is Liqoid V 0.1.9!\n Developer: @andizottmann\n
+    <string name="votingends">Voting ends</string>
+    <string name="lastVotingEnded">Finished</string>
+    <string name="lastVotingStarted">Starts voting</string>
+    <string name="lastFrozen">Frozen</string>
+    <string name="lastClosed">Closed</string>
+    <string name="lastRevoked">Revoked</string>
+    <string name="lastNeuerEntwurf">New alternative</string>
+    <string name="lastErzeugt">New issue</string>
+    <string name="supporter">Supporter</string>
+    <string name="members">Members</string>
+
+    <string name="fullcredits">Hello this is Liqoid V 0.1.10!\n Developer: @andizottmann\n
     All CC-BY-SA 3.0 DE\n
     Thanks to:\n@nlohmann @darkbln @viirus42 @LarsUlrich92 @Bocki_NBG  @threehoursleep @PiratenCup @mockfrog @Iceman
     @bridgerdier @hubx @larswestphal @Piratonym Tokamak  @mon3yp3nny @RedDog
