--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -58,6 +58,7 @@
     <string name="lastErzeugt">New issue</string>
     <string name="supporter">Supporter</string>
     <string name="members">Members</string>
+    <string name="save">Save</string>
 
     <string name="fullcredits">Hello this is Liqoid V 0.1.10!\n Developer: @andizottmann\n
     All CC-BY-SA 3.0 DE\n
