--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -59,6 +59,7 @@
     <string name="supporter">Supporter</string>
     <string name="members">Members</string>
     <string name="save">Save</string>
+<string name="collapse">Hide</string>
 
     <string name="fullcredits">Hello this is Liqoid V 0.1.10!\n Developer: @andizottmann\n
     All CC-BY-SA 3.0 DE\n
