Small improvements on GUI

--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -59,6 +59,7 @@
     <string name="members">Mitglieder</string>
     <string name="save">Speichern</string>
     <string name="collapse">Zuklappen</string>
+    <string name="initiatives">Initiativen</string>
 
 
 </resources>
