--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -61,6 +61,7 @@
     <string name="save">Save</string>
     <string name="collapse">Hide</string>
     <string name="initiatives">Initiatives</string>
+    <string name="clearcachequestion">Do you really want to clear the cache?</string>
 
     <string name="fullcredits">Hello this is Liqoid V 0.1.10!\n Developer: @andizottmann\n
     All CC-BY-SA 3.0 DE\n
