--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -66,9 +66,11 @@
     <string name="readcache">Reading from cache:</string>
     <string name="search">Search</string>
     <string name="fulltextsearch">Fulltext Search</string>
-<string name="casetextsearch">Case sensitive</string>
+    <string name="casetextsearch">Case sensitive</string>
+    <string name="servicestarted">Service started</string>
+    <string name="refreshedcontent">Service paused</string>
 
-    <string name="fullcredits">Hello this is Liqoid V 0.2.5!\n Developer: @andizottmann\n
+    <string name="fullcredits">Hello this is Liqoid V 0.3.0!\n Developer: @andizottmann\n
     All CC-BY-SA 3.0 DE\n
     Thanks to:\n@nlohmann @darkbln @viirus42 @LarsUlrich92 @Bocki_NBG  @threehoursleep @PiratenCup @mockfrog @Iceman
     @bridgerdier @hubx @larswestphal @Piratonym Tokamak  @mon3yp3nny @RedDog @levudev
